Fix codeEditor overflow

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -21,6 +21,7 @@
 
 .text-editor-item{
     grid-area: one;
+    height: 100%;
 }
 
 .graph-output-item{
@@ -29,9 +30,18 @@
 
 .graph-output-item canvas{
     width: 100%;
-    height: 100%;
 }
 
 .initial-values-item{
     grid-area: three;
+}
+
+.iterations-selector{
+    height: 2rem;
+}
+
+.text-editor{
+    font-family: "Fira code", "Fira Mono", "monospace";
+    font-size: 12px;
+    height: calc(100% - 2rem);
 }
